--- a/TODO.org
+++ b/TODO.org
@@ -1,9 +1,9 @@
-* update generators [9%]
+* update generators [11%]
 ** DONE all-your-base
 ** DONE allergies
 ** DONE anagram
 ** DONE armstrong-numbers
-** TODO atbash-cipher
+** DONE atbash-cipher
 ** TODO bob
 ** TODO bracket-push
 ** TODO change
